[gd_scene load_steps=11 format=3 uid="uid://ca1xo5djf8hqf"]

[ext_resource type="Script" path="res://manadrop.gd" id="1_kaao6"]
[ext_resource type="Shader" path="res://shaders/manadrop.gdshader" id="2_ih3nc"]

[sub_resource type="SphereShape3D" id="SphereShape3D_0a8dt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_483yu"]
render_priority = 0
shader = ExtResource("2_ih3nc")
shader_parameter/albedo = null
shader_parameter/specular = null
shader_parameter/metallic = null
shader_parameter/alpha_scissor_threshold = null
shader_parameter/roughness = null
shader_parameter/point_size = null
shader_parameter/uv1_scale = null
shader_parameter/uv1_offset = null
shader_parameter/uv2_scale = null
shader_parameter/uv2_offset = null
shader_parameter/speed = 5.0
shader_parameter/frequency_uniform = 30.0
shader_parameter/is_breath = false
shader_parameter/breath_speed = 0.368
shader_parameter/breath_freq = 0.021

[sub_resource type="Animation" id="Animation_gfvbc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_aqrjq"]
resource_name = "dissapear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0.1, 0.1, 0.1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ball-roll-collision")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_physics_process"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area3D/pickup-collision")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_physics_process"
}]
}

[sub_resource type="Animation" id="Animation_6mv3s"]
resource_name = "flashing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_k6850"]
resource_name = "manaidle"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5, 8, 8.5, 9, 9.5, 10),
"transitions": PackedFloat32Array(2.07052, 1, 0.615572, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0.6, 0), Vector3(0, 0.5, 0), Vector3(0, 0.6, 0), Vector3(0, 0.5, 0), Vector3(0, 0.6, 0), Vector3(0, 0.5, 0), Vector3(0, 0.6, 0), Vector3(0, 0.5, 0), Vector3(0, 0.6, 0), Vector3(0, 0.5, 0), Vector3(0, 0.6, 0), Vector3(0, 0.5, 0), Vector3(0, 0.6, 0), Vector3(0, 0.5, 0), Vector3(0, 0.6, 0), Vector3(0, 0.5, 0), Vector3(0, 0.6, 0), Vector3(0, 0.5, 0), Vector3(0, 0.6, 0), Vector3(0, 0.5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(5, 5.5, 6, 6.5, 7, 7.5, 8, 8.5, 9, 9.5, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_26yoe"]
_data = {
"RESET": SubResource("Animation_gfvbc"),
"dissapear": SubResource("Animation_aqrjq"),
"flashing": SubResource("Animation_6mv3s"),
"manaidle": SubResource("Animation_k6850")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_n3ce8"]
radius = 2.0

[node name="Node3D" type="Node3D"]
script = ExtResource("1_kaao6")

[node name="RigidBody3D" type="RigidBody3D" parent="."]
collision_layer = 0
mass = 0.1
gravity_scale = 5.475
continuous_cd = true

[node name="ball-roll-collision" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_0a8dt")

[node name="despawn" type="Timer" parent="RigidBody3D"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="spawn" type="Timer" parent="RigidBody3D"]
one_shot = true
autostart = true

[node name="CSGSphere3D" type="CSGSphere3D" parent="RigidBody3D"]
radius = 0.25
material = SubResource("ShaderMaterial_483yu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="RigidBody3D/CSGSphere3D"]
libraries = {
"": SubResource("AnimationLibrary_26yoe")
}
autoplay = "manaidle"

[node name="Area3D" type="Area3D" parent="RigidBody3D/CSGSphere3D"]
collision_layer = 0
collision_mask = 25

[node name="pickup-collision" type="CollisionShape3D" parent="RigidBody3D/CSGSphere3D/Area3D"]
shape = SubResource("SphereShape3D_n3ce8")

[connection signal="timeout" from="RigidBody3D/despawn" to="." method="_on_despawn_timeout"]
[connection signal="timeout" from="RigidBody3D/spawn" to="." method="_on_spawn_timeout"]
[connection signal="body_entered" from="RigidBody3D/CSGSphere3D/Area3D" to="." method="_on_area_3d_body_entered"]
